# obs-snekstudio-source

./: .gitignore  CMakeLists.txt  LICENSE  MVP.md  PHASE1.md  README.md  SPEC.md  tasks.md
.github/: release-notes.md
.github/workflows/: release-artifacts.yml
assetlib/SnekStudioOBSFramePublisher/: README.md  SUBMISSION_NOTES.md
assetlib/SnekStudioOBSFramePublisher/Mods/OBSFramePublisher/: LICENSE.md  OBSFramePublisher.gd  README.md
debian/: changelog  control  copyright  rules
drafts/: SNEKSTUDIO_MODULE_PR_NOTES.md  SNEKSTUDIO_PUBLISHER.md  SNEKSTUDIO_UPSTREAM_PR_DRAFT.md  snekstudio_publisher_draft.c  snekstudio_publisher_draft.h
include/: snekstudio_frame_protocol.h
packaging/: README.md
packaging/arch/: PKGBUILD  PKGBUILD-git.template  PKGBUILD-release.template  README.md  UPSTREAM-LICENSE-NOTICE  obs-snekstudio-source.install
packaging/aur/: README.md
packaging/aur/obs-snekstudio-source-git/: .SRCINFO  PKGBUILD
packaging/nix/: default.nix
scripts/: build_snekstudio_mod_zip.sh  create_source_tarball.sh  phase1_portal_probe.py  run_snekstudio_with_external_mods.sh  snekstudio_demo_publisher.py
snekstudio-mods/: README.md
snekstudio-mods/OBSFramePublisher/Mods/OBSFramePublisher/: OBSFramePublisher.tscn  description.txt
src/: snekstudio_source_plugin.c
